@@ -1,9 +1,11 @@
 SQuirreL SQL FX Change Log
 ==============================
 
-Feature (in progress): First steps towards query builder.
+Bug fix: NullPointerException occurred when empty table was rerun.
 
 Feature: Message panel entries and SQL-Error panel text can be copied to clipboard.
+
+Feature (in progress): First steps towards query builder.
 
 Bug fix: ClassCastException occurred in background when create table statement was executed.
 
